confluent-kafka-cluster/deploy/otcol-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otelcol-kafka-consumer
  namespace: confluent-kafka
  labels:
    app: otelcol
    component: kafka-consumer
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8889"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 8889
    targetPort: 8889
    protocol: TCP
  - name: health
    port: 13133
    targetPort: 13133
    protocol: TCP
  - name: pprof
    port: 1777
    targetPort: 1777
    protocol: TCP
  - name: zpages
    port: 55679
    targetPort: 55679
    protocol: TCP
  - name: internal-mtr
    port: 8888
    targetPort: 8888
    protocol: TCP
  selector:
    app: otelcol
    component: kafka-consumer
---
apiVersion: v1
kind: Service
metadata:
  name: otelcol-kafka-consumer-headless
  namespace: confluent-kafka
  labels:
    app: otelcol
    component: kafka-consumer
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: metrics
    port: 8889
    targetPort: 8889
    protocol: TCP
  selector:
    app: otelcol
    component: kafka-consumer
